# Pmonitor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pmonitor/: __main__.py  monitor.py  utils.py
src/psrm/: __main__.py  monitor.py  utils.py
