[project]
name = "pmonitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ray", email = "smallzhu66@163.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
