[project]
name = "pmonitor"
version = "0.1.1"
description = "A process system resource usage monitor."
readme = "README.md"
authors = [
    { name = "Ray", email = "smallzhu66@163.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "psutil>=7.1.3",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
pmonitor = "pmonitor.__main__:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
